--- a/google2.html
+++ b/google2.html
@@ -8,7 +8,12 @@
     <title>Document</title>
     <link href="http://fonts.cdnfonts.com/css/product-sans" rel="stylesheet">
     <style>
-        @import url('http://fonts.cdnfonts.com/css/product-sans');
+         @import url('http://fonts.cdnfonts.com/css/product-sans');
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
         .nav{
             display: flex;
             justify-content: space-between;
@@ -38,7 +43,7 @@
         .container{
             text-align: center;
             position: absolute;
-            top: 20%;
+            top: 30%;
             left: 50%;
             transform: translateY(-20%) translateX(-50%);
         }
