--- a/google2.html
+++ b/google2.html
@@ -19,11 +19,7 @@
             justify-content: space-between;
             margin-top: 30px;
         }
-        .left a{
-            margin: 10px;
-            text-decoration: none;
-            color: black;
-        }
+        .left a,
         .right a{
             margin: 10px;
             text-decoration: none;
